# patent-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/sdd/phase-10/: watchlist-alerts.md
docs/sdd/phase-3/: search-engine.md
docs/sdd/phase-4/: expiration-intelligence.md
docs/sdd/phase-5/: epo-integration.md
docs/sdd/phase-6/: similarity-prior-art.md
docs/sdd/phase-7/: citations-trends.md
docs/sdd/phase-8/: idea-generation.md
docs/sdd/phase-9/: white-space-discovery.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  ExpirationPage.tsx  IdeasPage.tsx  IngestionPage.tsx  Landing.tsx  SearchPage.tsx  SimilarityPage.tsx  TrendsPage.tsx  WatchlistPage.tsx  WhiteSpacePage.tsx
src/: config.py
src/ai/: embeddings.py  search_service.py
src/api/: main.py
src/api/routes/: analysis.py  expiration.py  health.py  ideas.py  ingestion.py  patents.py  search.py  similarity.py  watchlist.py  whitespace.py
src/api/schemas/: expiration.py  ideas.py  patent.py  search.py  similarity.py  whitespace.py
src/database/: connection.py  init.sql
src/database/migrations/: env.py
src/ingesters/: base.py  epo_client.py  epo_ingester.py  uspto_ingester.py
src/models/: __init__.py  ingestion.py  patent.py  watchlist.py
src/pipeline/: deduplicator.py  expiration_calc.py  normalizer.py  orchestrator.py  patent_store.py
src/services/: citation_service.py  expiration_service.py  idea_service.py  similarity_service.py  stats_service.py  watchlist_service.py  whitespace_service.py
src/utils/: logger.py  rate_limiter.py  retry.py
tests/: conftest.py
tests/unit/: test_citation_service.py  test_epo_ingester.py  test_expiration_calc.py  test_expiration_service.py  test_health.py  test_idea_service.py  test_normalizer.py  test_rate_limiter.py  test_search_service.py  test_similarity_service.py  test_uspto_ingester.py  test_watchlist_service.py  test_whitespace_service.py
