[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patent-intelligence"
version = "0.1.0"
description = "AI-powered patent intelligence platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "pgvector>=0.2.4",
    "sentence-transformers>=2.3.0",
    "numpy>=1.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "factory-boy>=3.3.0",
    "responses>=0.24.0",
    "aiosqlite>=0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "T20", "RET", "SIM"]
ignore = [
    "S101",    # assert statements allowed in tests
    "COM812",  # trailing comma - handled by formatter
    "E712",    # == False/True comparisons required for SQLAlchemy column expressions
    "B008",    # Depends() in defaults is standard FastAPI pattern
    "B905",    # zip strict parameter not needed for equal-length iterables
    "E501",    # line too long - handled by formatter where possible
    "RET504",  # unnecessary assignment before return - sometimes aids readability
    "B904",    # raise from err - not always necessary for HTTP exceptions
    "SIM102",  # nested if - sometimes clearer than combined conditions
    "SIM108",  # ternary operator - not always more readable
    "SIM118",  # dict.keys() - harmless extra call
    "B007",    # unused loop variable - underscore prefix is optional
    "B028",    # stacklevel in warnings - not critical
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
